<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="Marcador de Lugares"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:layout_marginTop="75dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="16dp">

    </TextView>

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/dica_email"
        android:gravity="left"
        />

    <EditText
        android:id="@+id/senhaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/dica_senha"
        android:inputType="textPassword"
        android:layout_gravity="left"
        />

    <Button
        android:onClick="fazerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/login"
        android:background="@color/Thunder"
        android:cursorVisible="false"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/Thunder"
        android:onClick="irParaCadastro"
        android:padding="16dp"
        android:text="@string/quero_me_cadastrar" />

</LinearLayout>