<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovoUsuarioActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="Cadastro"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:layout_marginTop="30dp"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="16dp">

    </TextView>

    <EditText
        android:id="@+id/emailNovoUsuarioEditText"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/dica_email"
        android:gravity="center"/>


    <EditText
        android:id="@+id/senhaNovoUsuarioEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/dica_senha"
        android:inputType="textPassword"
        android:padding="16dp" />

    <Button
        android:onClick="criarNovoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/salvar"
        android:background="@color/Thunder"/>


</LinearLayout>